--- a/_posts/2021-01-03-2021년도 공부히스토리.markdown
+++ b/_posts/2021-01-03-2021년도 공부히스토리.markdown
@@ -18,3 +18,10 @@ ___
 ## Shell
 2021-01-03 Shell 기본 문법 공부
  - 반복적인 단순 작업을 자동화 해보았다.
+
+## JIRA
+2021-01-20 JIRA를 통한 이슈 트레킹 및 코드리뷰 등 적용
+
+## C#
+2021-01-25 LINQ 기본 문법 공부 및 기존 코드 리팩토링
+ - 기존의 코드를 리팩토링하여 가독성 높이기 위한 작업을 해보았다.
