--- a/_posts/2021-01-25-JIRA 사용하기.markdown
+++ b/_posts/2021-01-25-JIRA 사용하기.markdown
@@ -9,7 +9,6 @@ categories : EssentialTool
 <br/>
 
 # 1. JIRA
-___
 이번 글에서는 처음 JIRA를 사용하는 사람도 쉽게 따라할수있도록
 프로젝트 생성부터 시작해서 기본적인 커스터마이징까지 적용시켜볼것이다.
 
@@ -30,8 +29,6 @@ JIRA는<br/>
 데이터를 기반으로 한 시각적인 표현으로 업무의 효율을 상승시킬 수 있다<br/><br/>
 
 # 2. JIRA 시작
-___
-
 ## **2.1 프로젝트 생성**<br/>
 
 JIRA 에 가입후 프로젝트 생성을 하자.
@@ -120,19 +117,21 @@ JIRA 에 가입후 프로젝트 생성을 하자.
 
 <p align="center">
     <img src="https://github.com/k4keye/k4keye.github.io/blob/master/images/JIRA/11.png?raw=true"/>
+    
 플랫폼이라는 이슈 유형을 추가해보았다.<br/><br/>
 
 해당 이슈의 아이콘을 변경하려 하면
 
 <p align="center">
-    <img src="https://github.com/k4keye/k4keye.github.io/blob/master/images/JIRA/12.png?raw=true"/>
+    <img src="https://github.com/k4keye/k4keye.github.io/blob/master/images/JIRA/12.png"/>
 
 이슈 유형에서 변경하고 싶은 유형을 편집하여
 
 <p align="center">
-    <img src="https://github.com/k4keye/k4keye.github.io/blob/master/images/JIRA/13.png?raw=true"/>
+    <img src="https://github.com/k4keye/k4keye.github.io/blob/master/images/JIRA/13.png"/>
 
 아이콘을 변경할 수 있다.
+
 <br/><br/>
 
 ## **2.4 이슈 유형 분류**<br/>
@@ -164,8 +163,6 @@ JIRA 에 가입후 프로젝트 생성을 하자.
 
 
 # 3. JIRA 와 GitHub 연동
-___
-
 ## **3.1 GitHub 연동**<br/>
 
 <p align="center">
