--- a/_posts/2021-01-03-2021년도 공부히스토리.markdown
+++ b/_posts/2021-01-03-2021년도 공부히스토리.markdown
@@ -25,3 +25,6 @@ ___
 ## C#
 2021-01-25 LINQ 기본 문법 공부 및 기존 코드 리팩토링
  - 기존의 코드를 리팩토링하여 가독성 높이기 위한 작업을 해보았다.
+
+2021-02-5 단위 테스트 연습
+ - 기존의 코드의 테스트 코드를 작성해보는것으로 테스트 코드 작성 방법을 알게되었다.
